--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,10 @@ html {
     font-weight: 700;
     font-style: normal;
     font-size: 16px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #65A1F0;
 }
 
 h1 {
@@ -18,4 +22,51 @@ h2 {
 p {
     font-size: 1rem;
 }
-  
+
+body{
+    width: 100vw;
+    max-width: 1200px;
+    margin: 0;
+}
+
+header{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    background-color: #162FF0;
+}
+
+#logo{
+    width: 20vw;
+    height: auto;
+    margin-left: 2vw;
+    margin-top: 1vh;
+    margin-bottom: 1vh;
+}
+
+nav{
+    display: flex;
+    flex-direction: row;
+    align-items: end;
+}
+
+ul{
+    display: flex;
+    flex-direction: row;
+    background-color: #1673F0;
+    border-radius: 9px;
+    margin-bottom: 1vw;
+    margin-right: 1vw;
+    padding: 0; 
+}
+
+li{
+    list-style-type: none;
+    margin-left: 2vw;
+    margin-right: 2vw;
+}
+
+li a {
+    text-decoration: none;
+    color: white;
+  }
