--- a/styles.css
+++ b/styles.css
@@ -74,23 +74,26 @@ li a {
 main{
     display: flex;
     flex-direction: row;
+    background-color: #0AD1F5;
+    padding: 3vh 0 3vh 0;
 }
 
 #main-left{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     width: 50%;
-    height: 60vh;
+    height: auto;
 }
 
 #main-left h1{
     width: 80%;
+    margin: 3vh 0 3vh 0;
 }
 
 #main-left p{
     width: 80%;
+    margin: 3vh 0 3vh 0;
 }
 
 #input-caja{
@@ -99,7 +102,7 @@ main{
     align-items: center;
     justify-content: space-between;
     width: 70%;
-    margin-top: 10%;
+    margin: 3vh 0 3vh 0;
 }
 
 #input-caja input{
@@ -111,8 +114,8 @@ main{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 60vh;
     width: 50%;
+    height: auto;
 }
 
 #main-right img{
@@ -120,4 +123,48 @@ main{
     height: auto;
     border: solid 2px #162FF0;
     border-radius: 10px;
+}
+
+#productos{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #5BADF5;
+    padding: 3vh 0 3vh 0;
+}
+
+#productos-down{
+    display: flex;
+    flex-direction: row;
+    width: 90%;
+}
+
+.contenedor-producto{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: solid 1px black;
+    border-radius: 20px;
+    margin: 1vw;
+    padding: 1vw;
+}
+
+.contenedor-producto img{
+    width: 100%;
+    height: 30vh;
+}
+
+#demo{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #0AF5CB;
+    padding: 3vh 0 3vh 0;
+}
+
+#demo video{
+    aspect-ratio: 16/9;
+    width: 90%;
+    border: solid 1px black;
+    margin-bottom: 3vh;
 }
