--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ html {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #65A1F0;
+    background-color: #6F8F72;
 }
 
 h1 {
@@ -29,11 +29,12 @@ body{
     margin: 0;
 }
 
+
 header{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    background-color: #162FF0;
+    background-color: #504B43;
 }
 
 #logo{
@@ -53,7 +54,7 @@ nav{
 ul{
     display: flex;
     flex-direction: row;
-    background-color: #1673F0;
+    background-color: #6F8F72;
     border-radius: 9px;
     margin-bottom: 1vw;
     margin-right: 1vw;
@@ -74,8 +75,8 @@ li a {
 main{
     display: flex;
     flex-direction: row;
-    background-color: #0AD1F5;
     padding: 3vh 0 3vh 0;
+    background-color: rgb(143, 214, 148);
 }
 
 #main-left{
@@ -121,7 +122,7 @@ main{
 #main-right img{
     width: 90%;
     height: auto;
-    border: solid 2px #162FF0;
+    border: solid 2px #000000;
     border-radius: 10px;
 }
 
@@ -129,8 +130,8 @@ main{
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #5BADF5;
     padding: 3vh 0 3vh 0;
+    background-color: #7DBA84;
 }
 
 #productos-down{
@@ -142,23 +143,23 @@ main{
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: solid 1px black;
     border-radius: 20px;
-    background-color: #0AD1F5;
     margin: 1vw;
     padding: 1vw;
+    background-color: #6F8F72;
 }
 
 .contenedor-producto img{
     width: 100%;
     height: auto;
+    border-radius: 10px;
 }
 
 #demo{
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #0AD1F5;
+    background-color: #8FD694;
     padding: 3vh 0 3vh 0;
 }
 
@@ -175,7 +176,7 @@ main{
 }
 
 footer {
-    background-color: #1673F0;
+    background-color: #7DBA84;
     color: white;
     font-weight: lighter;
 }
