--- a/styles-mobile.css
+++ b/styles-mobile.css
@@ -21,6 +21,10 @@
         margin-bottom: 1vh;
     }
 
+    #input-caja{
+        flex-direction: column;
+    }
+
     main{
         flex-direction: column;
         align-items: center;
@@ -58,6 +62,11 @@
 
     #demo iframe{
         width: 90%;
+    }
+
+    #contacto{
+        display: grid;
+        grid-template-columns: 1fr;
     }
 
     .footer-content {
