--- a/styles-mobile.css
+++ b/styles-mobile.css
@@ -25,6 +25,10 @@
         flex-direction: column;
     }
 
+    #input-suscribete{
+        margin-bottom: 10px;
+    }
+
     main{
         flex-direction: column;
         align-items: center;
@@ -60,7 +64,14 @@
         padding: 2vh;
     }
 
-    #demo iframe{
+    #pop-up{
+        width: 90vw;
+        background-color: rgba(0, 0, 0, 0.897);
+        border: solid 3px rgb(53, 53, 53);
+        border-radius: 20px;
+    }
+
+    #demo-video{
         width: 90%;
     }
 
