--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ p {
 
 body{
     width: 100vw;
-    height: 100vh;
+    height: auto;
     max-width: 1200px;
     margin: 0;
     background-image: url('src/images/araucaria.png');
@@ -111,8 +111,9 @@ main{
     margin: 3vh 0 3vh 0;
 }
 
-#input-caja input{
+#input-suscribete{
     width: 70%;
+    margin-bottom: 0;
 }
 
 #main-right{
@@ -160,6 +161,40 @@ main{
     border-radius: 10px;
 }
 
+#pop-up{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 10;
+    width: 50vw;
+    height: auto;
+    background-color: rgba(0, 0, 0, 0.897);
+    border: solid 3px rgb(53, 53, 53);
+    border-radius: 20px;
+}
+
+#pop-up p{
+    color: white;
+    text-align: center;
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
+
+#desenfoque{
+    position: fixed;
+    width: 100vw;
+    max-width: 1200px;
+    height: 100%;
+    z-index: 10;
+    background-color: rgba(0, 0, 0, 0.692);
+    backdrop-filter: blur(10px);
+}
+
 #demo{
     display: flex;
     flex-direction: column;
@@ -173,7 +208,7 @@ main{
     text-align: center;
 }
 
-#demo iframe{
+#demo-video{
     aspect-ratio: 16/9;
     width: 60%;
     border: solid 1px black;
