--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@ header{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    background-color: #504B43;
+    background: linear-gradient(to right, #861388, #E15A97);
 }
 
 #logo{
@@ -59,7 +59,7 @@ nav{
 ul{
     display: flex;
     flex-direction: row;
-    background-color: #6F8F72;
+    background-color: #861388;
     border-radius: 9px;
     margin-bottom: 1vw;
     margin-right: 1vw;
@@ -81,7 +81,7 @@ main{
     display: flex;
     flex-direction: row;
     padding: 3vh 0 3vh 0;
-    background-color: rgba(143, 214, 148, 0.705);
+    background: linear-gradient(to right, #eeabc2ea, #ffeaf4e1);
 }
 
 #main-left{
@@ -137,7 +137,7 @@ main{
     flex-direction: column;
     align-items: center;
     padding: 3vh 0 3vh 0;
-    background-color: #7dba84b0;
+    background: linear-gradient(to left, #c76084e7, #ffc4d4ea);
 }
 
 #productos-down{
@@ -152,7 +152,7 @@ main{
     border-radius: 20px;
     margin: 1vw;
     padding: 1vw;
-    background-color: #6f8f72a6;
+    background-color: #8613884d;
 }
 
 .contenedor-producto img{
@@ -199,7 +199,7 @@ main{
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #8fd694d2;
+    background: linear-gradient(to right, #eeabc2ea, #ffeaf4e1);
     padding: 3vh 0 3vh 0;
 }
 
@@ -216,7 +216,7 @@ main{
 }
 
 #contacto{
-    background-color: #54915ace;
+    background: linear-gradient(to left, #c76084e7, #ffc4d4ea);
     display: grid;
     grid-template-columns: 1fr 1fr;
 }
@@ -263,7 +263,7 @@ textarea{
 }
 
 footer {
-    background-color: #7DBA84;
+    background: linear-gradient(to right, #861388, #E15A97);
     color: white;
     font-weight: lighter;
 }
