--- a/styles-mobile.css
+++ b/styles-mobile.css
@@ -1,3 +1,46 @@
+@media (min-width: 601px) and (max-width: 900px) {
+    main{
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #main-left{
+        width: 80%;
+    }
+    
+    #main-left h1{
+        width: 100%;
+    }
+    
+    #main-left p{
+        width: 100%;
+    }
+
+    #main-right{
+        width: 80%;
+    }
+    
+    #main-right img{
+        width: 100%;
+    }
+
+    #input-caja{
+        align-self: flex-start;
+        justify-content: left;
+    }
+
+    #input-suscribete{
+        margin-right: 20px;
+    }
+
+    #productos-down{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr); /* 2 columnas */
+        grid-template-rows: repeat(3, 1fr);
+    }
+}
+
+
 @media (max-width: 600px) {
     header{
         display: flex;
