--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,18 @@ p {
     font-size: 1rem;
 }
 
+.color1{
+    background: linear-gradient(to right, #131588, #5adce1);
+}
+
+.color2{
+    background-color: rgba(214, 255, 249, 0.842);
+}
+
+.color3{
+    background-color: rgba(190, 228, 222, 0.842);
+}
+
 body{
     width: 100vw;
     height: auto;
@@ -39,7 +51,6 @@ header{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    background: linear-gradient(to right, #861388, #E15A97);
 }
 
 #logo{
@@ -59,7 +70,7 @@ nav{
 ul{
     display: flex;
     flex-direction: row;
-    background-color: #861388;
+    background-color: #1f1388;
     border-radius: 9px;
     margin-bottom: 1vw;
     margin-right: 1vw;
@@ -81,7 +92,6 @@ main{
     display: flex;
     flex-direction: row;
     padding: 3vh 0 3vh 0;
-    background: linear-gradient(to right, #eeabc2ea, #ffeaf4e1);
 }
 
 #main-left{
@@ -137,7 +147,6 @@ main{
     flex-direction: column;
     align-items: center;
     padding: 3vh 0 3vh 0;
-    background: linear-gradient(to left, #c76084e7, #ffc4d4ea);
 }
 
 #productos-down{
@@ -152,7 +161,8 @@ main{
     border-radius: 20px;
     margin: 1vw;
     padding: 1vw;
-    background-color: #8613884d;
+    background-color: #5a5a5a4d;
+    border: solid 1px rgb(116, 116, 116);
 }
 
 .contenedor-producto img{
@@ -199,7 +209,6 @@ main{
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: linear-gradient(to right, #eeabc2ea, #ffeaf4e1);
     padding: 3vh 0 3vh 0;
 }
 
@@ -210,13 +219,12 @@ main{
 
 #demo-video{
     aspect-ratio: 16/9;
-    width: 60%;
+    width: 80%;
     border: solid 1px black;
     margin-bottom: 3vh;
 }
 
 #contacto{
-    background: linear-gradient(to left, #c76084e7, #ffc4d4ea);
     display: grid;
     grid-template-columns: 1fr 1fr;
 }
@@ -263,7 +271,6 @@ textarea{
 }
 
 footer {
-    background: linear-gradient(to right, #861388, #E15A97);
     color: white;
     font-weight: lighter;
 }
